--- a/HotelApp/CMakeLists.txt
+++ b/HotelApp/CMakeLists.txt
@@ -3,5 +3,5 @@ project(HotelApp)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp Hotel.cpp Hotel.h Reservation.cpp Reservation.h Ydelser.cpp Ydelser.h Dato.cpp Dato.h Kunde.cpp Kunde.h Person.cpp Person.h)
+set(SOURCE_FILES main.cpp Hotel.cpp Hotel.h Reservation.cpp Reservation.h Ydelser.cpp Ydelser.h Dato.cpp Dato.h Kunde.cpp Kunde.h Person.cpp Person.h Vaerelse.cpp Vaerelse.h)
 add_executable(HotelApp ${SOURCE_FILES})
